--- a/room/index.html
+++ b/room/index.html
@@ -56,7 +56,7 @@ annotationProcessor &#34;android.arch.lifecycle:compiler:1.1.1&#34;</code></pre>
         <pre><code>@Entity
 public class Poem {
    @PrimaryKey (autoGenerate = true)
-   public String id;
+   public int id;
 
    public String author;
    public String title;
