--- a/viewmodel/index.html
+++ b/viewmodel/index.html
@@ -26,7 +26,7 @@
     
       <google-codelab-step label="Introducció" duration="0">
         <p>El objetivo de esta práctica es explicar el elemento <strong><code>ViewModel</code></strong>.</p>
-<p>La clase <a href="https://developer.android.com/reference/android/arch/lifecycle/ViewModel.html" target="_blank">ViewModel</a> está diseñada para almacenar y gestionar datos relacionados con la UI de forma consciente al ciclo de vida. La clase <a href="https://developer.android.com/reference/android/arch/lifecycle/ViewModel.html" target="_blank">ViewModel</a> permite que los datos sobrevivan a cambios de configuración, como la rotación de la pantalla.</p>
+<p>La clase <a href="https://developer.android.com/reference/android/arch/lifecycle/ViewModel.html" target="_blank"><code>ViewModel</code></a> está diseñada para almacenar y gestionar datos relacionados con la UI de forma consciente al ciclo de vida. La clase <a href="https://developer.android.com/reference/android/arch/lifecycle/ViewModel.html" target="_blank"><code>ViewModel</code></a><code> </code>permite que los datos sobrevivan a cambios de configuración, como la rotación de la pantalla.</p>
 <p><img style="max-width: 522.00px" src="img\c5ef819a04c024e7.png"></p>
 <p>En esta práctica ampliaremos la practica anterior: <a href="https://gerardfp.github.io/recyclerview/" target="_blank">https://gerardfp.github.io/recyclerview/</a> de forma que permita valorar con estrellas cada poema.</p>
 
