--- a/uf3/index.html
+++ b/uf3/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta name="theme-color" content="#4F7DC9">
   <meta charset="UTF-8">
-  <title>UF3 Desenvolupament d&#39;aplicacions per a dispositius mòbils</title>
+  <title>DAM MP08 Desenvolupament d&#39;aplicacions per a dispositius mòbils</title>
   <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../../elements/codelab.html">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro:400|Roboto:400,300,400italic,500,700|Roboto+Mono">
@@ -20,7 +20,7 @@
 </head>
 <body unresolved class="fullbleed">
 
-  <google-codelab title="UF3 Desenvolupament d&#39;aplicacions per a dispositius mòbils"
+  <google-codelab title="DAM MP08 Desenvolupament d&#39;aplicacions per a dispositius mòbils"
                   environment="web"
                   feedback-link="https://github.com/gerardfp">
     
