--- a/uf1/index.html
+++ b/uf1/index.html
@@ -92,7 +92,7 @@
       </google-codelab-step>
     
       <google-codelab-step label="Lifecycle Callbacks" duration="120">
-        <p><a href="https://gerardfp.github.io/lifecycle-callbacks/" target="_blank">https://gerardfp.github.io/lifecycle-callbacks/</a></p>
+        <p><a href="https://gerardfp.github.io/lifecycle/" target="_blank">https://gerardfp.github.io/lifecycle/</a></p>
 
 
       </google-codelab-step>
