--- a/elements/codelab.html
+++ b/elements/codelab.html
@@ -1,2 +1,3 @@
 
 <link rel="import" href="../bower_components/google-codelab-elements/google-codelab-elements.html">
+<script src="../codeCopyToClipboard.js"></script>
