--- a/uf1/index.html
+++ b/uf1/index.html
@@ -127,6 +127,12 @@
 
       </google-codelab-step>
     
+      <google-codelab-step label="Retrofit &#43; Glide" duration="120">
+        <p><a href="https://gerardfp.github.io/retrofit/" target="_blank">https://gerardfp.github.io/retrofit/</a></p>
+
+
+      </google-codelab-step>
+    
       <google-codelab-step label="Projecte TheMovieDb" duration="120">
         <p><a href="https://gerardfp.github.io/themoviedb/" target="_blank">https://gerardfp.github.io/themoviedb/</a></p>
 
