--- a/uf2/index.html
+++ b/uf2/index.html
@@ -50,8 +50,14 @@
 
       </google-codelab-step>
     
-      <google-codelab-step label="Projecte SocialApp" duration="120">
-        <p><a href="https://gerardfp.github.io/socialapp/" target="_blank">https://gerardfp.github.io/socialapp/</a></p>
+      <google-codelab-step label="Firebase" duration="120">
+        <p><a href="https://gerardfp.github.io/firebase/" target="_blank">https://gerardfp.github.io/firebase/</a></p>
+
+
+      </google-codelab-step>
+    
+      <google-codelab-step label="Firebase Auth" duration="120">
+        <p><a href="https://gerardfp.github.io/firebase-auth/" target="_blank">https://gerardfp.github.io/firebase-auth/</a></p>
 
 
       </google-codelab-step>
