--- a/firebase/index.html
+++ b/firebase/index.html
@@ -25,7 +25,8 @@
                   feedback-link="https://github.com/gerardfp">
     
       <google-codelab-step label="Introducció" duration="2">
-        <p><a href="https://console.firebase.google.com/" target="_blank">https://console.firebase.google.com/</a></p>
+        <p><img style="max-width: 621.00px" src="img\876d0b6d05d8a43a.png"></p>
+<p><a href="https://console.firebase.google.com/" target="_blank">https://console.firebase.google.com/</a></p>
 
 
       </google-codelab-step>
