--- a/uf2/index.html
+++ b/uf2/index.html
@@ -62,6 +62,12 @@
 
       </google-codelab-step>
     
+      <google-codelab-step label="Firebase Database" duration="120">
+        <p><a href="https://gerardfp.github.io/firebase-database/" target="_blank">https://gerardfp.github.io/firebase-database/</a></p>
+
+
+      </google-codelab-step>
+    
   </google-codelab>
 
   <script>
