--- a/firebase-database/index.html
+++ b/firebase-database/index.html
@@ -43,7 +43,7 @@
         <p>Accedeix a la consola: <a href="https://console.firebase.google.com" target="_blank">https://console.firebase.google.com</a> </p>
 <p>Crea la <strong>Realtime Database</strong>:</p>
 <p><img style="max-width: 736.40px" src="img\c60dfe8c480eb353.png"></p>
-<p>Actívala en <strong>Mode de prova</strong>:</p>
+<p>Activa-la en <strong>Mode de prova</strong>:</p>
 <p>:<img style="max-width: 658.00px" src="img\7cac28835e3fed12.png"></p>
 
 
