--- a/mp03/codelab1/index.html
+++ b/mp03/codelab1/index.html
@@ -26,11 +26,12 @@
     
       <google-codelab-step label="Introducció" duration="0">
         <p><img style="max-width: 651.00px" src="img/a09a4539e9a22a3a.png"></p>
-<p>El Java Development Kit proporciona herramientas de desarrollo para la creación de programas JAVA.</p>
-<p>Nos centraremos en los dos siguientes componentes:</p>
+<p>El Java Development Kit proporciona eines de desenvolupament per a la creació de programes JAVA.</p>
+<p>Qué aprendràs</p>
 <ul>
-<li><strong>javac </strong>- es el compilador</li>
-<li><strong>java </strong>- es el lanzador de aplicaciones (ejecuta las aplicaciones en la máquina virtual JVM)</li>
+<li>El procés de desnvolupament de programes amb tecnologia Java</li>
+<li>Compilar un programa a partir del codi font</li>
+<li>Executar un programa compilat</li>
 </ul>
 
 
@@ -47,10 +48,10 @@
 <p>Abre el archivo descargado con el Gestor de Archivadores y extrae el contenido en tu Carpeta Personal</p>
 <p>⏩ Prueba el compilador y el intérprete</p>
 <p>Comprueba que puedes ejecutar el compilador y el intérprete, haciendo que muestren su versión. Para ello, abre un terminal y ejecuta los siguientes comandos:</p>
-<p>1 - Ejecuta el compilador con la opción que muestra la versión</p>
+<p>1 - Ejecuta el <strong>compilador</strong> con la opción que muestra la versión</p>
 <pre>jdk1.8.0_144/bin/javac -version</pre>
 <p>✅ Comprueba que muestra la versión</p>
-<p>2 - Ejecuta el intérprete con la opción que muestra la versión</p>
+<p>2 - Ejecuta el <strong>intérprete</strong> con la opción que muestra la versión</p>
 <pre>jdk1.8.0_144/bin/java -version</pre>
 <p>✅ Comprueba, de nuevo, que muestra la versión</p>
 <p><img style="max-width: 722.00px" src="img/ced9aeadbdf507a9.png"></p>
