--- a/mp03/codelab1/index.html
+++ b/mp03/codelab1/index.html
@@ -27,7 +27,7 @@
       <google-codelab-step label="Introducció" duration="0">
         <p><img style="max-width: 651.00px" src="img/a09a4539e9a22a3a.png"></p>
 <p>El Java Development Kit proporciona eines de desenvolupament per a la creació de programes JAVA.</p>
-<p>Qué aprendràs</p>
+<p>Què aprendràs</p>
 <ul>
 <li>El procés de desnvolupament de programes amb tecnologia Java</li>
 <li>Compilar un programa a partir del codi font</li>
@@ -38,15 +38,15 @@
       </google-codelab-step>
     
       <google-codelab-step label="Obtenir el JDK" duration="0">
-        <p>⏩ Descarrega el JDK</p>
+        <h2>⏩ Descarrega el JDK</h2>
 <p>Trobarás el JDK oficial d&#39;Oracle al següent enllaç: </p>
 <p><a href="https://www.oracle.com/technetwork/java/javase/downloads/index.html" target="_blank"><paper-button class="colored" raised>Oracle Java Development Kit (JDK)</paper-button></a></p>
 <aside class="warning"><p><strong>Important</strong>: Has de tenir en compte l&#39;arquitectura de l&#39;ordinador (x84/x64) i el Sistema Operatiu.</p>
 </aside>
 <p>✅ Comprova que s&#39;ha descargado el archivo en la carpeta de baixades</p>
-<p>⏩ Descomprimeix l&#39;arxiu al teu directori personal</p>
+<h2>⏩ Descomprimeix l&#39;arxiu al teu directori personal</h2>
 <p>Abre el archivo descargado con el Gestor de Archivadores y extrae el contenido en tu Carpeta Personal</p>
-<p>⏩ Prueba el compilador y el intérprete</p>
+<h2>⏩ Prueba el compilador y el intérprete</h2>
 <p>Comprueba que puedes ejecutar el compilador y el intérprete, haciendo que muestren su versión. Para ello, abre un terminal y ejecuta los siguientes comandos:</p>
 <p>1 - Ejecuta el <strong>compilador</strong> con la opción que muestra la versión</p>
 <pre>jdk1.8.0_144/bin/javac -version</pre>
@@ -67,8 +67,8 @@
 <li>Compilamos el código fuente mediante el compilador <code>javac</code>, que lo traduce a bytecode.</li>
 <li>Ejecutamos el programa compilado con la Java Virtual Machine <code>java</code></li>
 </ol>
-<p><img style="max-width: 736.40px" src="img/9f4bce3a5316b062.png"></p>
-<p>⏩ Escribe el código fuente del programa &#34;Hola Mundo&#34;</p>
+<p><img style="max-width: 618.30px" src="img/8826de8ed091c72.png"></p>
+<h2>⏩ Escribe el código fuente del programa &#34;Hola Mundo&#34;</h2>
 <p>Abre un editor de texto sin formato, como gedit, y crea un archivo en tu carpeta personal, con el nombre  <strong><code>HelloWorldApp.java</code></strong></p>
 <p>Copia el siguiente código y guarda los cambios:</p>
 <pre><code>class HelloWorldApp {
@@ -79,11 +79,11 @@
 <aside class="special"><p>  Nota:Teclea todo el código, comandos y nombres de fichero exactamente como se muestran. Tanto el compilador (javac) como el lanzador (java) son case-sensitive, así que debes poner las mayúsculas correctamente.</p>
 <p><code>HelloWorldApp</code>  <em>no</em> es lo mismo que  <code>helloworldapp</code></p>
 </aside>
-<p>⏩ Compila el archivo con el código fuente</p>
+<h2>⏩ Compila el archivo con el código fuente</h2>
 <p>Usa el siguiente comando en el terminal para compilar el archivo de código fuente que acabas de crear:</p>
 <pre>jdk1.8.0_144/bin/javac HelloWorldApp.java</pre>
 <p>Este comando habrá generado un fichero llamado <strong><code>HelloWorldApp.class</code></strong> con el <em>bytecode </em>de tu programa. Compruébalo.</p>
-<p>⏩ Ejecuta el programa con la Máquina Virtual de Java</p>
+<h2>⏩ Ejecuta el programa con la Máquina Virtual de Java</h2>
 <pre>jdk1.8.0_144/bin/java HelloWorldApp</pre>
 <p>¡Felicidades! ¡Has ejecutado tu primer programa!</p>
 
