--- a/mp03/ide/index.html
+++ b/mp03/ide/index.html
@@ -24,6 +24,13 @@
                   environment="web"
                   feedback-link="https://github.com/gerardfp">
     
+      <google-codelab-step label="Introducció" duration="0">
+        <h2><img style="max-width: 166.70px" src="img/2501f78d7d121a45.png"></h2>
+<h2>En este curso utilizaremos IntelliJ IDEA como nuestro Entorno Integrado de Desarrollo (IDE), que facilita el proceso de desarrollo de software. Las tareas de escribir, compilar y ejecutar un programa, se realizan todas dentro del IDE. Además proporciona herramientas muy útiles como &#34;Resaltado de codigo&#34;, &#34;Autocompletado&#34;, &#34;Detección de errores&#34;, &#34;Deupración&#34; ¡y muchísimas otras que iremos viendo y descubriendo!</h2>
+
+
+      </google-codelab-step>
+    
       <google-codelab-step label="Instal·la IntelliJ IDEA Community Edition" duration="0">
         <h2>Descarrega </h2>
 <p>Pots descarregar IntelliJ IDEA Community Edition de la web de JetBrains: </p>
