--- a/mp03/ide/index.html
+++ b/mp03/ide/index.html
@@ -74,8 +74,12 @@
 <p><img style="max-width: 481.87px" src="img/460223fa3dcb1150.png"></p>
 <p>3 - Pon el nombre <code>HelloWorldApp</code> a tu proyecto.</p>
 <p><img style="max-width: 480.89px" src="img/909bb1ec4aa26fb7.png"></p>
-<h2>Escriu, compila i executa el programa <code>HelloWorldApp</code></h2>
-<p>1 - Borra la línea donde pone:</p>
+
+
+      </google-codelab-step>
+    
+      <google-codelab-step label="Escriu, compila i executa el programa HelloWorldApp" duration="0">
+        <p>1 - Borra la línea donde pone:</p>
 <pre><code>// write your code here</code></pre>
 <p>Y escribe el código que muestra el mensaje &#34;Hello World!&#34;:</p>
 <pre><code>System.out.println(&#34;Hello World!&#34;);</code></pre>
