--- a/mp03/ide/index.html
+++ b/mp03/ide/index.html
@@ -26,7 +26,7 @@
     
       <google-codelab-step label="Introducció" duration="0">
         <h2><img style="max-width: 166.70px" src="img/2501f78d7d121a45.png"></h2>
-<h2>En este curso utilizaremos IntelliJ IDEA como nuestro Entorno Integrado de Desarrollo (IDE), que facilita el proceso de desarrollo de software. Las tareas de escribir, compilar y ejecutar un programa, se realizan todas dentro del IDE. Además proporciona herramientas muy útiles como &#34;Resaltado de codigo&#34;, &#34;Autocompletado&#34;, &#34;Detección de errores&#34;, &#34;Deupración&#34; ¡y muchísimas otras que iremos viendo y descubriendo!</h2>
+<p>En este curso utilizaremos IntelliJ IDEA como nuestro Entorno Integrado de Desarrollo (IDE), que facilita el proceso de desarrollo de software. Las tareas de escribir, compilar y ejecutar un programa, se realizan todas dentro del IDE. Además proporciona herramientas muy útiles como &#34;Resaltado de codigo&#34;, &#34;Autocompletado&#34;, &#34;Detección de errores&#34;, &#34;Deupración&#34; ¡y muchísimas otras que iremos viendo y descubriendo!</p>
 
 
       </google-codelab-step>
