--- a/mp03/codelab1/index.html
+++ b/mp03/codelab1/index.html
@@ -43,17 +43,18 @@
 <p><a href="https://www.oracle.com/technetwork/java/javase/downloads/index.html" target="_blank"><paper-button class="colored" raised>Oracle Java Development Kit (JDK)</paper-button></a></p>
 <aside class="warning"><p><strong>Important</strong>: Has de tenir en compte l&#39;arquitectura de l&#39;ordinador (x84/x64) i el Sistema Operatiu.</p>
 </aside>
-<p>✅ Comprova que s&#39;ha descargado el archivo en la carpeta de baixades</p>
+<p>✅ Comprova que s&#39;ha descarregat l&#39;arxiu a la carpeta de baixades</p>
 <h2>Descomprimeix l&#39;arxiu al teu directori personal</h2>
-<p>Abre el archivo descargado con el Gestor de Archivadores y extrae el contenido en tu Carpeta Personal</p>
-<h2>Prueba el compilador y el intérprete</h2>
-<p>Comprueba que puedes ejecutar el compilador y el intérprete, haciendo que muestren su versión. Para ello, abre un terminal y ejecuta los siguientes comandos:</p>
-<p>1 - Ejecuta el <strong>compilador</strong> con la opción que muestra la versión</p>
+<p>Obre l&#39;arxiu descarregat amb el Gestor d&#39;Arxivadors i extreu el contingut a la teva Carpeta Personal</p>
+<h2>Prova el compilador i l&#39;intèrpret</h2>
+<p>Comprova que pots executar el compilador i l&#39;intèrpret, fent que mostrin la seva versió. Per a fer-ho, obre un terminal i executa les següents comandes:</p>
+<p>1 - Executa el <strong>compilador</strong> amb l&#39;opción que mostra la versió:</p>
 <pre>jdk1.8.0_144/bin/javac -version</pre>
-<p>✅ Comprueba que muestra la versión</p>
-<p>2 - Ejecuta el <strong>intérprete</strong> con la opción que muestra la versión</p>
+<p>✅ Comprova que mostra la versió</p>
+<p>2 - Executa l&#39;<strong>intèrpret</strong> amb l&#39;opció que mostra la versió:</p>
 <pre>jdk1.8.0_144/bin/java -version</pre>
-<p>✅ Comprueba, de nuevo, que muestra la versión</p>
+<p>✅ Comprova que mostra la versió</p>
+<p>Si tot ha anat correctament, t&#39;haurà sortit un resultat com aquest:</p>
 <p><img style="max-width: 722.00px" src="img/ced9aeadbdf507a9.png"></p>
 
 
@@ -77,7 +78,7 @@
     }
 }</code></pre>
 <aside class="special"><p>  Nota:Teclea todo el código, comandos y nombres de fichero exactamente como se muestran. Tanto el compilador (javac) como el lanzador (java) son case-sensitive, así que debes poner las mayúsculas correctamente.</p>
-<p><code>HelloWorldApp</code>  <em>no</em> es lo mismo que  <code>helloworldapp</code></p>
+<p><code>HelloWorldApp</code>  <strong><em>no</em></strong> es lo mismo que  <code>helloworldapp</code></p>
 </aside>
 <h2>Compila el archivo con el código fuente</h2>
 <p>Usa el siguiente comando en el terminal para compilar el archivo de código fuente que acabas de crear:</p>
